# ascom-alpaca-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  README.md  clippy.toml  rustfmt.toml  sailfish.toml
.config/: nextest.toml
.github/workflows/: rust.yml
benches/: benches.rs  image_array.rs
examples/: camera-client.rs  camera-server.rs  camera.rs  discover.rs
examples/camera-client/: Cargo.toml
examples/camera-client/src/: main.rs
examples/camera-server/: Cargo.toml
examples/camera-server/src/: main.rs
examples/discover/: Cargo.toml
examples/discover/src/: main.rs
src/: actix.rs  axum.rs  client.rs  devices.rs  discovery.rs  either.rs  errors.rs  lib.rs  macros.rs  new_trans.rs  params.rs  response.rs  rpc.rs  server.rs  transaction.rs
src/api/: bool_param.rs  camera_telescope_shared.rs  cover_calibrator.rs  device.rs  devices_impl.rs  dome.rs  filter_wheel.rs  focuser.rs  image_array_response.rs  macros.rs  mod.autogen.rs  mod.rs  observing_conditions.rs  rotator.rs  safety_monitor.rs  server_info.rs  switch.rs  telescope.rs  time_repr.rs
src/api/autogen/: ASCOM.DeviceInterfaces.xml  ASCOM.DriverAccess.xml  AlpacaDeviceAPI_v1.yaml  README.md  index.ts  package.json  pnpm-lock.yaml  rust-keywords.ts  tsconfig.json  xml-names.ts
src/api/camera/: mod.rs
src/api/camera/image_array/: client.rs  mod.rs  server.rs
src/api/device_state/: de.rs  mod.rs  ser.rs
src/api/image_array/: client.rs  mod.rs  server.rs
src/api/image_array_response/: client.rs  mod.rs  server.rs
src/api/scripts/: ASCOM.DriverAccess.xml  AlpacaDeviceAPI_v1.yaml  index.ts  rust-keywords.ts  tsconfig.json
src/autogen/: AlpacaDeviceAPI_v1.yaml  image_array_response.rs  index.ts  mod.rs  package.json  pnpm-lock.yaml  server.ejs  server_info.rs  tsconfig.json  xml-names.ts
src/autogen/scripts/: index.ts
src/client/: discovery.rs  mod.rs  params.rs  params_impl.rs  parse_flattened.rs  response.rs  test.rs  transaction.rs
src/client/benches/: mod.rs  resp_configured_devices.json  resp_image_array.json
src/discovery/: client.rs  mod.rs  server.rs
src/server/: case_insensitive_str.rs  device_setup_template.html  discovery.rs  error.rs  mod.rs  params.rs  params_impl.rs  response.rs  setup_page.rs  setup_template.html  test.rs  transaction.rs
src/test/: conformu.rs  logging_env.rs  mod.rs  omnisim.rs
src/test_utils/: conformu.rs  logging_env.rs  mod.rs  omnisim.rs
src/transaction/: client.rs  mod.rs  server.rs
