[package]
name = "ascom-alpaca"
version = "1.0.0-beta.3"
edition = "2021"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
categories = ["api-bindings", "science", "hardware-support"]
keywords = ["ascom", "alpaca", "astronomy", "astrophotography"]
description = "Rust implementation of the ASCOM Alpaca API for astronomy devices"
repository = "https://github.com/RReverser/ascom-alpaca-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1.81"
custom_debug = "0.6.1"
eyre = "0.6.12"
futures = "0.3.30"
ndarray = { version = "0.16.1" }
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies]
async-fn-stream = { version = "0.2.2", optional = true }
async-trait = { workspace = true }
axum = { version = "0.7.5", optional = true }
bytemuck = { version = "1.17.1", features = ["derive", "extern_crate_std"], optional = true }
bytes = { version = "1.7.1", optional = true }
custom_debug = { workspace = true }
netdev = { version = "0.30.0" }
eyre = { workspace = true }
futures = { workspace = true }
http = { version = "1.1.0", optional = true }
indexmap = { version = "2.5.0", features = ["serde"], optional = true }
macro_rules_attribute = "0.2.0"
mediatype = { version = "0.19.18", optional = true }
mime = { version = "0.3.17", optional = true }
ndarray = { workspace = true, optional = true }
net-literals = "0.2.0"
num_enum = "0.7.3"
once_cell = { version = "1.19.0", optional = true }
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.12.7", optional = true, default-features = false, features = ["json"] }
sailfish = { version = "0.8.3", optional = true }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde-ndim = { version = "2.0.2", optional = true, features = ["ndarray"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
serde_plain = { version = "1.0.2", optional = true }
serde_repr = "0.1.19"
socket2 = "0.5.7"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "parsing"], optional = true }
tokio = { workspace = true, features = ["net", "rt", "io-util"] }
tracing = { workspace = true }
tracing-futures = { version = "0.2.5", features = ["futures-03"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
ascom-alpaca = { path = ".", features = ["client", "server", "test"] }
criterion = { version = "0.5.1" }
ctor = "0.2.8"
serial_test = "3.1.1"
tracing-error = "0.2.0"
color-eyre = "0.6.3"
tracing-forest = { version = "0.1.6", features = ["ansi"] }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "image_array"
harness = false
required-features = ["client", "camera", "test"]

[features]
all-devices = ["camera", "covercalibrator", "dome", "filterwheel", "focuser", "observingconditions", "rotator", "safetymonitor", "switch", "telescope"]

__anydevice = []
test = ["tokio/process"]

camera = ["__anydevice", "dep:bytemuck", "dep:mediatype", "dep:ndarray", "dep:serde-ndim", "dep:time"]
covercalibrator = ["__anydevice"]
dome = ["__anydevice"]
filterwheel = ["__anydevice"]
focuser = ["__anydevice"]
observingconditions = ["__anydevice"]
rotator = ["__anydevice"]
safetymonitor = ["__anydevice"]
switch = ["__anydevice"]
telescope = ["__anydevice", "dep:time"]

client = ["dep:async-fn-stream", "dep:tracing-futures", "dep:reqwest", "dep:bytes", "dep:mime", "dep:rand", "dep:once_cell"]
server = ["dep:bytemuck", "dep:axum", "dep:http", "dep:sailfish", "dep:indexmap", "dep:serde_plain"]

nightly = []

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["examples/*"]
