[package]
name = "camera-client"
edition = "2021"
publish = false

[dependencies]
ascom-alpaca = { path = "../..", features = ["client", "camera"] }

eyre = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

bayer = "0.1.5"
eframe = "0.28.1"
