[package]
name = "camera-client"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ascom-alpaca = { path = "../..", features = ["client", "camera"] }

eyre = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

bayer = "0.1.5"
eframe = "0.32.1"
