[package]
name = "camera-server"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ascom-alpaca = { workspace = true, features = ["server", "camera"] }

async-trait = { workspace = true }
derive_more = { workspace = true, features = ["debug", "add"] }
eyre = { workspace = true }
futures = { workspace = true }
ndarray = { workspace = true, features = ["rayon"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nokhwa = { version = "0.10.10", features = ["input-native", "output-threaded"] }
parking_lot = { version = "0.12.5", features = ["arc_lock", "send_guard"] }

[dev-dependencies]
ascom-alpaca = { workspace = true, features = ["test"] }
